zetasql/parser/testdata/load.test
load data infile 'data.csv' into table foo options (charset = 'utf-8');
--
LoadDataStatement [0-70]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  OptionsList [51-70]
    OptionsEntry [52-69]
      Identifier(charset) [52-59]
      StringLiteral('utf-8') [62-69]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo OPTIONS(charset = 'utf-8')
==

load data infile 'data' into table db1.foo;
--
LoadDataStatement [0-42]
  StringLiteral('data') [17-23]
  PathExpression [35-42]
    Identifier(db1) [35-38]
    Identifier(foo) [39-42]
--
LOAD DATA INFILE 'data' INTO TABLE db1.foo
==

load data infile into table table1;
--
ERROR: Syntax error: Expected string literal but got keyword INTO [at 1:18]
load data infile into table table1;
                 ^
==

load data infile 'data.file' into table;
--
ERROR: Syntax error: Unexpected ";" [at 1:40]
load data infile 'data.file' into table;
                                       ^
==

# load data with config
load data infile 'data.csv' into table foo config (charset = 'utf-8');
--
LoadDataStatement [0-69]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  ConfigClause [43-69]
    OptionsList [50-69]
      OptionsEntry [51-68]
        Identifier(charset) [51-58]
        StringLiteral('utf-8') [61-68]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo
CONFIG(charset = 'utf-8')
==

# load data with config
load data infile 'data.csv' into table foo options (charset = 'utf-8') config (charset = 'utf-8');
--
LoadDataStatement [0-97]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  OptionsList [51-70]
    OptionsEntry [52-69]
      Identifier(charset) [52-59]
      StringLiteral('utf-8') [62-69]
  ConfigClause [71-97]
    OptionsList [78-97]
      OptionsEntry [79-96]
        Identifier(charset) [79-86]
        StringLiteral('utf-8') [89-96]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo OPTIONS(charset = 'utf-8')
CONFIG(charset = 'utf-8')
==
